# docs/swagger.json
@@ -1,8 +1,8 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is Open Api Document Server(Swagger)",
-        "title": "open API(Swagger)",
+        "description": "This is vehicle Api Document Server(Swagger)",
+        "title": "Hellow",
         "contact": {
             "email": "harimkim@hyundai-autoever.com"
         },
@@ -63,274 +63,6 @@
                         "description": "차량 등급[]",
                         "name": "grades",
                         "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/model.Vehiclemodel"
-                        }
-                    }
-                }
-            },
-            "post": {
-                "description": "VehicleModel을 생성한다.",
-                "consumes": [
-                    "text/html"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "Show a VehicleModelInsert",
-                "parameters": [
-                    {
-                        "description": "모델명",
-                        "name": "name",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "description": "제조사",
-                        "name": "brand",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "description": "대표 모델 여부",
-                        "name": "standard",
-                        "in": "body",
-                        "schema": {
-                            "type": "boolean"
-                        }
-                    },
-                    {
-                        "description": "대표 모델 ID",
-                        "name": "standardModelID",
-                        "in": "body",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "description": "좌석수",
-                        "name": "seatingCapacity",
-                        "in": "body",
-                        "schema": {
-                            "type": "integer"
-                        }
-                    },
-                    {
-                        "description": "연료 유형",
-                        "name": "fuelType",
-                        "in": "body",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "description": "연비",
-                        "name": "fuelEfficiency",
-                        "in": "body",
-                        "schema": {
-                            "type": "number"
-                        }
-                    },
-                    {
-                        "description": "주행 거리",
-                        "name": "displacement",
-                        "in": "body",
-                        "schema": {
-                            "type": "integer"
-                        }
-                    },
-                    {
-                        "description": "차량 등급",
-                        "name": "grade",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "description": "웜업 시간",
-                        "name": "warmUpTime",
-                        "in": "body",
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/model.Vehiclemodel"
-                        }
-                    }
-                }
-            }
-        },
-        "/vehiclemodel/{vehiclemodelID}": {
-            "get": {
-                "description": "VehicleModel을 조회한다",
-                "consumes": [
-                    "text/html"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "Show a  VehicleModelGet",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "모델 ID",
-                        "name": "vehicleID",
-                        "in": "path"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/model.Vehiclemodel"
-                        }
-                    }
-                }
-            },
-            "delete": {
-                "description": "VehicleModel을 삭제한다.",
-                "consumes": [
-                    "text/html"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "Show a  VehicleModelDelete",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "모델 ID",
-                        "name": "vehicleID",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/model.Vehiclemodel"
-                        }
-                    }
-                }
-            },
-            "patch": {
-                "description": "VehicleModel을 수정한다.",
-                "consumes": [
-                    "text/html"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "Show a VehicleModelUpdate",
-                "parameters": [
-                    {
-                        "description": "모델명",
-                        "name": "name",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "description": "제조사",
-                        "name": "brand",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "description": "대표 모델 여부",
-                        "name": "standard",
-                        "in": "body",
-                        "schema": {
-                            "type": "boolean"
-                        }
-                    },
-                    {
-                        "description": "대표 모델 ID",
-                        "name": "standardModelID",
-                        "in": "body",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "description": "좌석수",
-                        "name": "seatingCapacity",
-                        "in": "body",
-                        "schema": {
-                            "type": "integer"
-                        }
-                    },
-                    {
-                        "description": "연료 유형",
-                        "name": "fuelType",
-                        "in": "body",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "description": "연비",
-                        "name": "fuelEfficiency",
-                        "in": "body",
-                        "schema": {
-                            "type": "number"
-                        }
-                    },
-                    {
-                        "description": "주행 거리",
-                        "name": "displacement",
-                        "in": "body",
-                        "schema": {
-                            "type": "integer"
-                        }
-                    },
-                    {
-                        "description": "차량 등급",
-                        "name": "grade",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "description": "웜업 시간",
-                        "name": "warmUpTime",
-                        "in": "body",
-                        "schema": {
-                            "type": "integer"
-                        }
-                    },
-                    {
-                        "type": "string",
-                        "description": "모델 ID",
-                        "name": "vehicleID",
-                        "in": "path",
-                        "required": true
                     }
                 ],
                 "responses": {
